fix: :bug: Fix the width of collapses on mobile and footer not on the bottom of the screen

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,5 +1,5 @@
 .about-collapses {
-  width: 1025px;
+  width: 80vw;
   margin: auto;
   .collapse {
     margin-top: 20px;
